# Brain-Encoders

./: .gitignore  Amygdala.docx  Chat.txt  environment.yml  paper_early.txt  paper_rest.txt
amod_encoder/: README.md  _code_review_notes.txt  environment-node.yml  environment_midway3.yml  pyproject.toml
amod_encoder/configs/: amod_amygdala.yaml  amod_subregions.yaml  artificial_stim_predict.yaml  clip_amygdala.yaml  control_it_cortex.yaml  control_visual_cortex.yaml  dinov2_amygdala.yaml  example_custom_roi.yaml  replication_amygdala.yaml  replication_inferotemporal.yaml  replication_subregions.yaml  replication_visual_cortex.yaml
amod_encoder/configs/cluster/: amygdala.yaml  inferotemporal.yaml  subregions.yaml  visual_cortex.yaml
amod_encoder/data/: README.md
amod_encoder/docs/: 01_DATA_SETUP.md  02_GENERAL_USAGE.md  03_LOCAL_5070.md  04_NODE_SETUP.md
amod_encoder/envs/: README.md  brain-encoders.yml
amod_encoder/envs/stable-snapshot-2026-02-22/: README.md  environment-local.yml  torch-nightly.yml  torch-stable.yml
amod_encoder/envs/stable-snapshot-2026-02-22-full/: README.md  deep_compat_test.py  torch-nightly.yml  torch-stable.yml
amod_encoder/scripts/: run_actmax.ps1  submit.sh
amod_encoder/src/amod_encoder/: __init__.py  config.py
amod_encoder/src/amod_encoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
amod_encoder/src/amod_encoder/cli/: main.py
amod_encoder/src/amod_encoder/data/: bids_dataset.py  roi.py  timing.py
amod_encoder/tests/: conftest.py  test_alignment.py  test_atanh_matrix.py  test_extractors.py  test_fc7_loader.py  test_hrf.py  test_pls_shapes.py
(+82 files in other folders)
